# topix1000_disclosure_platform

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 20260322_0001_initial_schema.py  20260322_0002_edinet_filing_tables.py  20260326_0003_edinet_downloader_tables.py  20260330_0004_edinet_facts_raw_csv.py  20260405_0005_edinet_curated_kpi_view.py
apps/edinet_ingest/src/edinet_ingest/: main.py
apps/edinet_ingest/src/edinet_ingest/api/: health.py
apps/edinet_ingest/src/edinet_ingest/cli/: backfill.py  build_code_map.py  build_doc_edinet_map.py  build_feature_mart.py  build_market_labels.py  build_prices_dataset.py  dump_manifest.py  fetch_docs.py  fetch_list.py  ingest_zip.py  normalize_facts_from_csv.py
apps/edinet_ingest/src/edinet_ingest/downloader/: __init__.py  client.py  errors.py  filing_type_map.py  filing_type_map_edinet.json  scheduler.py  service.py  storage.py
apps/edinet_ingest/src/edinet_ingest/facts_csv/: __init__.py  code_map.py  doc_edinet_map.py  feature_mart.py  market_labels.py  (+2 more)
apps/edinet_ingest/tests/: conftest.py  test_build_code_map_cli.py  test_build_prices_dataset_cli.py  test_downloader_cli.py  test_downloader_client.py  test_downloader_services.py  test_facts_csv_service.py  test_health.py  test_ingest_service.py  test_manifest_and_parsers.py
apps/tdnet_monitor/src/tdnet_monitor/: main.py
apps/tdnet_monitor/tests/: test_health.py
docs/: architecture.md  data-contract.md  version-lock.md
docs/sql/: verify_edinet_curated_kpi_v1.sql
(+8 files in other folders)
